--- a/.htaccess
+++ b/.htaccess
@@ -11,5 +11,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} ^(.+)/$
 RewriteRule ^(.+)/$ /$1 [R=301,L]
 
+#RewriteCond %{HTTPS} =off
+#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [QSA,L]
+
 RewriteCond %{REQUEST_URI} !\.(css|js|php|png|jpg|jpeg|bmp|gif|PNG|svg|docx|webp|ico)$
 RewriteRule ^(.*)$ public/index.php [L]
